# polymarket-no-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  polybot-dashboard.html
.github/workflows/: docker.yml  reset-paper.yml
config/: docker.toml  sample.toml  short-paper.toml
src/: lib.rs  main.rs
src/config/: mod.rs
src/copytrade/: mod.rs
src/exchange/: book.rs  data_api.rs  gamma.rs  mod.rs  retry.rs
src/execution/: live.rs  mod.rs  paper.rs
src/learning/: analyzer.rs  mod.rs  rules.rs
src/metrics/: dashboard.html  dashboard.rs  mod.rs  server.rs
src/risk/: mod.rs
src/storage/: mod.rs
src/storage/migrations/: 001_init.sql  002_wallets.sql  003_migration_flags.sql  004_wallet_evaluation.sql
src/strategy/: filters.rs  mod.rs  scanner.rs
src/types/: mod.rs
src/wallets/: mod.rs  selector.rs
tests/: paper_integration.rs
