[package]
name = "polymarket_no_bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Production-grade Polymarket short-NO trading bot with copy-trading"
license = "MIT"

[[bin]]
name = "polymarket-no-bot"
path = "src/main.rs"

[dependencies]
polymarket_client_sdk_v2 = { version = "=0.6.0-canary.1", features = ["clob", "ws", "data", "gamma", "tracing", "heartbeats"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
parking_lot = "0.12"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
secrecy = "0.10"
alloy = { version = "1.8", default-features = false, features = ["signers"] }
tabled = "0.17"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
